MDEV-34062 WIP

Implement mmap based log scanning.

TODO: Do not overwrite the read-only log (*seq=1).

TODO: Implement better retry logic.

TODO: Rename is_pmem to is_mmap (?).